--- a/notebooks/01_weather_preprocessing.ipynb
+++ b/notebooks/01_weather_preprocessing.ipynb
@@ -309,8 +309,12 @@
   }
  ],
  "metadata": {
+  "jupytext": {
+   "cell_metadata_filter": "-all",
+   "notebook_metadata_filter": "all"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -324,7 +328,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
